Actions
Bug #12602
closedpic16f747: NULL pointer errors
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
Build errors on SPARC with NULL pointer:
../../sun4u/io/pic16f747.c: In function 'pic_attach': ../../sun4u/io/pic16f747.c:223: error: passing argument 6 of 'ddi_create_minor_node' makes integer from pointer without a cast ../../common/sys/sunddi.h:1571: note: expected 'int' but argument is of type 'void *' ../../sun4u/io/pic16f747.c:264: error: passing argument 6 of 'ddi_create_minor_node' makes integer from pointer without a cast ../../common/sys/sunddi.h:1571: note: expected 'int' but argument is of type 'void *'
Updated by Electric Monk about 2 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 5f94959e45722ce4c5b397c781bd33bdc12bc35f
commit 5f94959e45722ce4c5b397c781bd33bdc12bc35f Author: Toomas Soome <tsoome@me.com> Date: 2020-05-10T06:42:46.000Z 12602 pic16f747: NULL pointer errors Reviewed by: Gergő Doma <domag02@gmail.com> Reviewed by: Peter Tribble <peter.tribble@gmail.com> Reviewed by: C Fraire <cfraire@me.com> Approved by: Gordon Ross <gordon.w.ross@gmail.com>
Actions